告知用户对图的状态
1.计算时给用户反馈，让用户知晓计算进行中。
2.删除多余代码

--- a/AutoResizeToCrop_HTML/css/style.css
+++ b/AutoResizeToCrop_HTML/css/style.css
@@ -87,44 +87,10 @@ canvas
 
 .btn-match_m
 {
-    animation: btn-match-ani 1s infinite;       
+    background-color: #1b5e20;    
 }
 
-@-webkit-keyframes btn-match-ani{
-    0%{
-        background-color: #b32c39;
-    }
-    50%{
-        background-color: #cddc39;
-    }
-    100%{
-        background-color: #b32c39;
-    }
-}
 
-@-moz-keyframes btn-match-ani{
-    0%{
-        background-color: #b32c39;
-    }
-    50%{
-        background-color: #cddc39;
-    }
-    100%{
-        background-color: #b32c39;
-    }
-}
-
-@keyframes btn-match-ani{
-    0%{
-        background-color: #b32c39;
-    }
-    50%{
-        background-color: #cddc39;
-    }
-    100%{
-        background-color: #b32c39;
-    }
-}
 
 
 
